--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/angular": "^6.1.3",
     "@tinymce/tinymce-angular": "^6.0.1",
     "angular-responsive-carousel": "^2.1.2",
+    "angularx-social-login": "^4.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
