--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^9.7.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
