--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-responsive-carousel": "^2.1.2",
     "angularx-social-login": "^4.1.0",
     "firebase": "^9.7.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.10",
